WMSB content changes

--- a/products/wmsb/index.html
+++ b/products/wmsb/index.html
@@ -510,11 +510,11 @@
       </section>
 
       <!-- Features (home) -->
-      <section class="banner features bg-grey-EEE">
-        <div class="container pt-4 pr-pl-4 pb-0">
-          <h2 class="align-center mb-4 pt-2">Key Features</h2>
+      <section class="banner features bg-light">
+        <div class="container p-0">
+          <h2 class="align-center mb-1 pt-3 Montserrat">Key Features</h2>
           <!-- feature items -->
-          <div class="feature-list">
+          <div class="feature-list pt-2 pr-pl-4">
             <!-- feature list -->
             <ul class="list-unstyled feature-items mr-ml-a mw-65em">
               <li>
@@ -560,7 +560,7 @@
             <figcaption>A dashboard interface example of our amazing app</figcaption>
             <picture>
               <source media="(min-width: 40em)" srcset="images/content/img-content-app-02-wide-LG.png" class="lazyload" alt="Examples of Watch My School Bus CRM interface.">
-              <img src="images/content/img-content-app-02-wide-LG.png" data-src="images/content/img-content-app-01-wide-LG.png" class="lazyload"
+              <img src="images/content/img-content-app-02-wide-LG.png" data-src="images/content/img-content-app-03-wide-LG.png" class="lazyload"
                 alt="Examples of Watch My School Bus CRM interface.">
               <noscript>
                 <img src="images/content/img-content-app-02-wide-LG.png" alt="Examples of Watch My School Bus CRM interface.">
@@ -571,27 +571,28 @@
       </section>
 
       <!-- Services (home) -->
-      <section class="banner grid-banner services theme-yellow">
+      <section class="banner grid-banner services theme-yellow bg-bus-yelllow bg-cover">
         <div class="container p-4">
-          <h2 class="align-center mb-3 pt-2 pb-1">Watch My School Bus Services</h2>
+          <h2 class="mb-2 pt-2 Montserrat">Transportation Services</h2>
+          <p class="mb-3 mw-48em text-md">A large number of parents are now part of the 9-6 work culture. This prevents them from ensuring their children’s safe transportation to and from schools. Statistics prove that School bus is the safest method of school transportation.</p>
           <!-- feature items -->
-          <div class="grid-wrap">
+          <div class="grid-wrap pt-2">
             <!-- service -->
             <div class="feature">
               <div class="card theme-rust">
                 <!-- media item -->
-                <figure class="media-item lazyload">                  
+                <figure class="media-item lazyload">           
                   <picture>            
-                    <img src="../../images/content/img-content-security-dashboard-wide.jpg" data-src="../../images/content/img-content-security-dashboard-wide.jpg" class="lazyload" alt="Dashboard user interface example.">
+                    <img src="images/content/img-content-bus-grill-wide.jpg" data-src="images/content/img-content-bus-grill-wide.jpg" class="lazyload" alt="Illustration of testing data process.">
                     <noscript>
-                      <img src="../../images/content/img-content-security-dashboard-wide.jpg" alt="Dashboard user interface example.">
+                      <img src="images/content/img-content-bus-grill-wide.jpg" alt="Illustration of testing data process.">
                     </noscript>
                   </picture>
                 </figure>
                 <!-- copy -->
                 <div class="card-block">
-                  <h4 class="card-title">Customer Support</h4>
-                  <p class="card-text">Watch My School Bus enables its customers to take care of optimum performance of running your Watch My School Bus instance, so our customers don’t have to manage complex and expensive infrastructure.</p>
+                  <h4 class="card-title">Quick View & Control</h4>
+                  <p class="card-text">Transport managers can view the whole school bus transportation process and control different aspects of vehicles easily from the portal.</p>
                   <a href="#" class="btn btn-round btn-outline">Read More</a>
                 </div>
               </div>
@@ -601,17 +602,17 @@
               <div class="card theme-teal">
                 <!-- media item -->
                 <figure class="media-item lazyload">
-                  <picture>            
-                    <img src="../../images/content/img-content-bigdata-analysis-03-wide.jpg" data-src="../../images/content/img-content-bigdata-analysis-03-wide.jpg" class="lazyload" alt="Illustration of testing data process.">
+                  <picture>
+                    <img src="images/content/img-content-quick-view-wide.jpg" data-src="images/content/img-content-quick-view-wide.jpg" class="lazyload" alt="Dashboard user interface example.">
                     <noscript>
-                      <img src="../../images/content/img-content-bigdata-analysis-03-wide.jpg" alt="Illustration of testing data process.">
-                    </noscript>
+                      <img src="images/content/img-content-quick-view-wide.jpg" alt="Dashboard user interface example.">
+                    </noscript>                    
                   </picture>
                 </figure>
                 <!-- copy -->
                 <div class="card-block">
-                  <h4 class="card-title">Training Resources</h4>
-                  <p class="card-text">At a high-level, Watch My School Bus is a SaaS application that is designed to address the Commissions, Incentives, Payments, Loyalty and Analytics needs of any business in the simplest manner possible.</p>
+                  <h4 class="card-title">Smart Routing</h4>
+                  <p class="card-text">Find routes that are efficient with the help of highly advanced algorithms and smart mapping system for efficient school bus routing any time.</p>
                   <a href="#" class="btn btn-round btn-outline">Read More</a>
                 </div>
               </div>
@@ -622,16 +623,16 @@
                 <!-- media item -->
                 <figure class="media-item lazyload">
                   <picture>            
-                    <img src="../../images/content/img-content-testing-wide.jpg" data-src="../../images/content/img-content-testing-wide.jpg" class="lazyload" alt="Illustration of testing data process.">
+                    <img src="images/content/img-content-mobile-notifications-wide.jpg" data-src="images/content/img-content-mobile-notifications-wide.jpg" class="lazyload" alt="Illustration of testing data process.">
                     <noscript>
-                      <img src="../../images/content/img-content-testing-wide.jpg" alt="Illustration of testing data process.">
+                      <img src="images/content/img-content-mobile-notifications-wide.jpg" alt="Illustration of testing data process.">
                     </noscript>
                   </picture>
                 </figure>
                 <!-- copy -->
                 <div class="card-block">
-                  <h4 class="card-title">Sales Consulting</h4>
-                  <p class="card-text">Watch My School Bus is a completely integrated payments hub for financial institutions and enterprise customers. Watch My School Bus handles the most complex plans and lets its customers focus on success.</p>
+                  <h4 class="card-title">Real-Time Notifications</h4>
+                  <p class="card-text">School Transport managers get timely notifications on different aspects from different vehicles on the portal, allowing easy, quick management.</p>
                   <a href="#" class="btn btn-round btn-outline">Read More</a>
                 </div>
               </div>
@@ -648,16 +649,16 @@
           <div class="card card-row card-clean">
             <figure class="media-item mb-0 lazyload">
               <picture>
-                <source media="(min-width: 40em)" data-srcset="../../images/content/img-content-subscription-services.jpg" class="lazyload" alt="Group of application interfaces.">              
-                <img src="../../images/content/img-content-subscription-services-wide.jpg" data-src="../../images/content/img-content-subscription-services-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                <source media="(min-width: 40em)" data-srcset="images/content/img-content-kids-off-bus-tall.jpg" class="lazyload" alt="Group of application interfaces.">              
+                <img src="images/content/img-content-kids-off-bus-wide.jpg" data-src="images/content/img-content-kids-off-bus-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="../../images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-kids-off-bus-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
             </figure>
             <div class="card-block">
-              <h2 id="subscription-services" class="card-title">Subscription Services</h2>
-              <p class="card-text">The hosted Software-as-a-Service (SaaS) model also allows service providers to become more agile with the ability to quickly create, bundle and implement new offerings with minimal CapEx investments.</p>
+              <h2 id="subscription-services" class="card-title">How Our Solutions Help Schools</h2>
+              <p class="card-text">Managing the school bus fleet and ensuring the safety of school students is a huge challenge for any school. A school bus tracking software provides assistance in ensuring student transportation safety and reduces parental anxiety regarding student safety.</p>
               <a href="../../subscription-services.html" class="btn btn-lg btn-text">Find out how <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
             </div>
           </div>
@@ -689,55 +690,55 @@
       
       <!-- Contact Form -->
       <section class="banner contact-form">
-          <div class="container">
-  
-            <!-- Contact Form -->
-            <form id="contact-form" method="post" class="mr-ml-a mb-4 mw-56em" novalidate>
-              <h2 class="border-title mb-4">Contact form</h2>
-              <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label class="sr-only" for="contactName">Name</label>
-                    <input class="form-control" type="text" id="contactName" name="name" placeholder="Name" required>
-                    <p class="help-block text-danger"></p>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label class="sr-only" for="contactEmail">Email</label>
-                    <input class="form-control" type="email" id="contactEmail" name="email" placeholder="E-mail" required>
-                    <p class="help-block text-danger"></p>
-                  </div>
-                </div>
-                <div class="col-md-12">
-                  <div class="form-group">
-                    <label class="sr-only" for="contactSubject">Subject</label>
-                    <input class="form-control" type="text" id="subject" name="subject" placeholder="Subject">
-                    <p class="help-block text-danger"></p>
-                  </div>
-                </div>
-                <div class="col-md-12">
-                  <div class="form-group">
-                    <label class="sr-only" for="contactMessage">Message</label>
-                    <textarea class="form-control" id="contactMessage" name="message" placeholder="Message" rows="12"></textarea>
-                    <small class="form-text text-muted p-sm hidden">
-                      Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
-                    </small>
-                  </div>
-                </div>
-                <div class="col-md-12 mb-4">
-                  <small class="form-text text-muted mr-ml-a mb-0 mw-56em align-center">Concordus Applications is a Systems Integrator that is focused on building a connected world by offering innovative, smart and cost-effective solutions. Our products aim to automate the business processes used for various Users in industries like the Communications Channel, Retail, Health care etc. We offer end-to-end services for software design, build, maintenance and support and we work across technology domains, platforms, infrastructure and tools.</small>
-                </div>
-                <div class="col-md-12">
-                  <div class="align-center">
-                    <button class="btn btn-brand btn-xl" type="submit">Send Request</button>
-                  </div>
+        <div class="container pt-pb-4">
+
+          <!-- Contact Form -->
+          <form id="contact-form" method="post" class="mr-ml-a mb-4 mw-56em" novalidate>
+            <h2 class="border-title mb-4">Contact form</h2>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label class="sr-only" for="contactName">Name</label>
+                  <input class="form-control" type="text" id="contactName" name="name" placeholder="Name" required>
+                  <p class="help-block text-danger"></p>
                 </div>
               </div>
-            </form>
-  
-          </div>
-        </section>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label class="sr-only" for="contactEmail">Email</label>
+                  <input class="form-control" type="email" id="contactEmail" name="email" placeholder="E-mail" required>
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
+              <div class="col-md-12">
+                <div class="form-group">
+                  <label class="sr-only" for="contactSubject">Subject</label>
+                  <input class="form-control" type="text" id="subject" name="subject" placeholder="Subject">
+                  <p class="help-block text-danger"></p>
+                </div>
+              </div>
+              <div class="col-md-12">
+                <div class="form-group">
+                  <label class="sr-only" for="contactMessage">Message</label>
+                  <textarea class="form-control" id="contactMessage" name="message" placeholder="Message" rows="12"></textarea>
+                  <small class="form-text text-muted p-sm hidden">
+                    Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+                  </small>
+                </div>
+              </div>
+              <div class="col-md-12 mb-4">
+                <small class="form-text text-muted mr-ml-a mb-0 mw-56em align-center">Concordus Applications is a Systems Integrator that is focused on building a connected world by offering innovative, smart and cost-effective solutions. Our products aim to automate the business processes used for various Users in industries like the Communications Channel, Retail, Health care etc. We offer end-to-end services for software design, build, maintenance and support and we work across technology domains, platforms, infrastructure and tools.</small>
+              </div>
+              <div class="col-md-12">
+                <div class="align-center">
+                  <button class="btn btn-brand btn-xl" type="submit">Send Request</button>
+                </div>
+              </div>
+            </div>
+          </form>
+
+        </div>
+      </section>
 
     </main>
 
