--- a/products/wmsb/index.html
+++ b/products/wmsb/index.html
@@ -902,8 +902,8 @@
         <h2 class="modal-title h5 mb-0 sr-only" id="demo-modal">Concordus Video Demo</h2>
       </div>
       <div class="modal-body">
-        <div class="media-wrap">
-          <iframe width="100%" src="//www.youtube.com/embed/nQhyHO3asNE" frameborder="0" allowfullscreen></iframe>
+        <div class="media-wrap lazyload">
+          <iframe class="lazyload" width="100%" src="//www.youtube.com/embed/nQhyHO3asNE" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
