--- a/index.html
+++ b/index.html
@@ -753,13 +753,15 @@
         <h2 class="modal-title h5 mb-0 sr-only" id="demo-modal">Concordus Video Demo</h2>
       </div>
       <div class="modal-body">
-        <div class="media-wrap">
-          <iframe width="100%" src="//www.youtube.com/embed/nQhyHO3asNE" frameborder="0" allowfullscreen></iframe>
+        <div class="media-wrap lazyload">
+          <iframe class="lazyload" width="100%" src="https://www.youtube.com/embed/ThlWQKV0Xw0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ThlWQKV0Xw0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
   <!-- async font loading -->
   <script>
