temp main nav update

--- a/MASTER.html
+++ b/MASTER.html
@@ -438,6 +438,11 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#0" id="products-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
                 <div class="dropdown-menu" aria-labelledby="products-dropdown">
+                  <a class="dropdown-item" href="http://gochatmate.com/">Chatmate</a>
+                  <a class="dropdown-item" href="//www.gr8integration.com/">Gr8Integration</a>
+                  <a class="dropdown-item" href="//www.gr8market.biz/">Gr8Market</a>
+                  <a class="dropdown-item" href="//dlangton60.wixsite.com/ca-aws/">AWS Partner</a>
+                  <a class="dropdown-item" href="//maxcentive.netlify.com/">MaxCentive</a>
                   <a class="dropdown-item" href="products/wmsb/">Watch My School Bus</a>
                 </div>
               </li>
