--- a/MASTER-content.html
+++ b/MASTER-content.html
@@ -435,7 +435,7 @@
                 <a class="nav-link" href="about.html">About<!--<span class="sr-only">(current)</span>--></a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#0" id="products-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
+                <a class="nav-link dropdown-toggle" id="products-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
                 <div class="dropdown-menu" aria-labelledby="products-dropdown">
                   <a class="dropdown-item" href="http://gochatmate.com/">Chatmate</a>
                   <a class="dropdown-item" href="//www.gr8integration.com/">Gr8Integration</a>
