--- a/products/wmsb/index.html
+++ b/products/wmsb/index.html
@@ -434,6 +434,9 @@
           <div class="collapse navbar-collapse" id="main-menu">
             <ul class="navbar-nav ml-a">
               <li class="nav-item">
+                <a class="nav-link" href="../../index.html">Home</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="../../about.html">About</a>
               </li>
               <li class="nav-item dropdown dropdown-active">
