--- a/products/wmsb/index.html
+++ b/products/wmsb/index.html
@@ -440,7 +440,7 @@
                 <a class="nav-link" href="../../about.html">About</a>
               </li>
               <li class="nav-item dropdown dropdown-active">
-                <a class="nav-link dropdown-toggle" id="products-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
+                <a class="nav-link dropdown-toggle" href="products" id="products-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
                 <div class="dropdown-menu" aria-labelledby="products-dropdown">
                   <a class="dropdown-item" href="http://gochatmate.com/">Chatmate</a>
                   <a class="dropdown-item" href="//www.gr8integration.com/">Gr8Integration</a>
@@ -451,7 +451,7 @@
                 </div>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="../../services.html" id="services-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
+                <a class="nav-link dropdown-toggle" href="services" id="services-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
                 <div class="dropdown-menu" aria-labelledby="services-dropdown">
                   <a class="dropdown-item" href="../../subscription-services.html">Subscription Services</a>
                   <a class="dropdown-item" href="../../integration.html">Integration</a>
@@ -464,7 +464,7 @@
                 </div>
               </li>              
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="analytics.html" id="analytics-dropdown" data-toggle="dropdown" aria-haspopup="true"
+                <a class="nav-link dropdown-toggle" href="analytics" id="analytics-dropdown" data-toggle="dropdown" aria-haspopup="true"
                   aria-expanded="false">Analytics</a>
                 <div class="dropdown-menu" aria-labelledby="analytics-dropdown">
                   <a class="dropdown-item" href="../../analytics.html">Overview</a>
