--- a/sentiment-analysis.html
+++ b/sentiment-analysis.html
@@ -435,7 +435,7 @@
                 <a class="nav-link" href="about.html">About<!--<span class="sr-only">(current)</span>--></a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="products-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
+                <a class="nav-link dropdown-toggle" href="products" id="products-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
                 <div class="dropdown-menu" aria-labelledby="products-dropdown">
                   <a class="dropdown-item" href="http://gochatmate.com/">Chatmate</a>
                   <a class="dropdown-item" href="//www.gr8integration.com/">Gr8Integration</a>
@@ -446,7 +446,7 @@
                 </div>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="services.html" id="services-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
+                <a class="nav-link dropdown-toggle" href="services" id="services-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
                 <div class="dropdown-menu" aria-labelledby="services-dropdown">
                   <a class="dropdown-item" href="subscription-services.html">Subscription Services</a>
                   <a class="dropdown-item" href="integration.html">Integration</a>
@@ -459,7 +459,7 @@
                 </div>
               </li>              
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="analytics.html" id="analytics-dropdown" data-toggle="dropdown" aria-haspopup="true"
+                <a class="nav-link dropdown-toggle" href="analytics" id="analytics-dropdown" data-toggle="dropdown" aria-haspopup="true"
                   aria-expanded="false">Analytics</a>
                 <div class="dropdown-menu" aria-labelledby="analytics-dropdown">
                   <a class="dropdown-item" href="analytics.html">Overview</a>
@@ -479,7 +479,7 @@
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="demo.html" data-toggle="modal" data-target="#demo-modal">Demo</a>
+                <a class="nav-link" href="demo" data-toggle="modal" data-target="#demo-modal">Demo</a>
               </li>
             </ul>
           </div>
@@ -729,8 +729,8 @@
         <h2 class="modal-title h5 mb-0 sr-only" id="demo-modal">Concordus Video Demo</h2>
       </div>
       <div class="modal-body">
-        <div class="media-wrap">
-          <iframe width="100%" src="//www.youtube.com/embed/nQhyHO3asNE" frameborder="0" allowfullscreen></iframe>
+        <div class="media-wrap lazyload">
+          <iframe class="lazyload" data-src="https://www.youtube.com/embed/nQhyHO3asNE" width="100%" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
