--- a/contact.html
+++ b/contact.html
@@ -443,7 +443,7 @@
                   <a class="dropdown-item" href="http://gochatmate.com/">Chatmate</a>
                   <a class="dropdown-item" href="//www.gr8integration.com/">Gr8Integration</a>
                   <a class="dropdown-item" href="//www.gr8market.biz/">Gr8Market</a>
-                  <a class="dropdown-item" href="//dlangton60.wixsite.com/ca-aws/">AWS Partner</a>
+                  <a class="dropdown-item" href="//www.gr8cloud.biz/">Gr8Cloud</a>
                   <!--<a class="dropdown-item" href="//maxcentive.netlify.com/">MaxCentive</a>-->
                   <a class="dropdown-item" href="products/wmsb/">Watch My School Bus</a>
                 </div>
