--- a/MASTER-content.html
+++ b/MASTER-content.html
@@ -861,8 +861,8 @@
           <div class="contact-info">
             <h4 class="text-md">Contact Us</h4>
             <div class="contact-nav text-sm">
-              <a href="tel:8005557654">800.555.7654</a>
-              <a href="mailto:contact@maxcentive.com">contact@concordusapps.com</a>
+              <a href="tel:5128002629">512.800.2629</a>
+              <a href="mailto:info@concordusapps.com">info@concordusapps.com</a>
             </div>
           </div>
           <div class="footer-copyright">
@@ -871,7 +871,7 @@
               <a href="#0"><svg class="icon"><use xlink:href="#icon-twitter-circle" /></svg></a>
               <a href="#0"><svg class="icon"><use xlink:href="#icon-linkedin-circle" /></svg></a>
             </div>
-            <p class="mb-0 text-sm">&copy; 2017 Concordus Applications. All rights reserved.</p>
+            <p class="mb-0 text-sm">&copy; 2018 Concordus Applications. All rights reserved.</p>
           </div>
         </section>
       </div>
