--- a/products/wmsb/index.html
+++ b/products/wmsb/index.html
@@ -703,7 +703,7 @@
         <div class="container pt-pb-4">
 
           <!-- Contact Form -->
-          <form id="contact-form" method="post" class="mr-ml-a mb-4 mw-56em pr-pl-2" novalidate>
+          <form id="contact-form" name="wmsbContact" class="mr-ml-a mb-4 mw-56em pr-pl-2" netlify>
             <h2 class="align-center mb-0 pt-1 pb-2 Montserrat">Contact Us</h2>
             <div class="row mr-ml-0">
               <div class="col-md-6">
