--- a/contact.html
+++ b/contact.html
@@ -679,7 +679,7 @@
           <h2 class="modal-title h5 mb-0" id="contact-modal">Get in touch</h2>
         </div>
         <div class="modal-body">
-          <form id="" action="post">
+          <form id="contact-form" name="mainContact" action="post" netlify>
             <div class="row">
               <div class="form-group col-md-6">
                 <label for="name" class="form-control-label">Name:</label>
