--- a/public/about/index.html
+++ b/public/about/index.html
@@ -526,7 +526,13 @@
         
         
         <li class="nav-item">
-          <a class="nav-link" href="#demo-modal" data-toggle="modal" data-target="#demo-modal" title="open video demo">Demo</a>
+          <a 
+            class="nav-link" 
+            href="#video-demo-modal" 
+            data-toggle="modal" 
+            data-target="#video-demo-modal" 
+            title="open video demo"
+            >Demo</a>
         </li>
       </ul>
     </div>
