adding Netlify form code

--- a/contact.html
+++ b/contact.html
@@ -27,31 +27,31 @@
 </head>
 
 <body>
-  
+
   <!-- skip to Main link -->
   <a class="skip-link" href="#main">skip to main content</a>
 
   <!-- UI critical icons -->
   <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-  
+
     <symbol id="icon-menu" viewBox="0 0 32 32" aria-labelledby="icon-menu-title icon-menu-desc">
       <title id="menu-title"></title>
       <desc id="menu-desc"></desc>
       <path d="M26.24 14.4h-20.48c-0.883 0-0.96 0.715-0.96 1.6s0.077 1.6 0.96 1.6h20.48c0.883 0 0.96-0.715 0.96-1.6s-0.077-1.6-0.96-1.6zM26.24 20.8h-20.48c-0.883 0-0.96 0.715-0.96 1.6s0.077 1.6 0.96 1.6h20.48c0.883 0 0.96-0.715 0.96-1.6s-0.077-1.6-0.96-1.6zM5.76 11.2h20.48c0.883 0 0.96-0.715 0.96-1.6s-0.077-1.6-0.96-1.6h-20.48c-0.883 0-0.96 0.715-0.96 1.6s0.077 1.6 0.96 1.6z"></path>
     </symbol>
-    
+
     <symbol id="icon-chevron-sm" viewBox="0 0 32 32" aria-labelledby="icon-chevron-sm-title icon-chevron-sm-desc">
       <title id="icon-chevron-sm-title"></title>
       <desc id="icon-chevron-sm-desc"></desc>
       <path d="M17.6 16l-5.026-5.472c-0.429-0.432-0.429-1.131 0-1.565 0.429-0.432 1.122-0.432 1.55 0l6.128 6.253c0.429 0.434 0.429 1.134 0 1.566l-6.128 6.253c-0.427 0.435-1.122 0.432-1.55 0-0.429-0.43-0.429-1.131 0-1.565l5.026-5.47z"></path>
     </symbol>
-      
+
   </svg>
-  
+
   <!-- SVG icon no-js fallback -->
   <noscript>
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-  
+
       <symbol id="icon-compass" viewBox="0 0 32 32" aria-labelledby="icon-compass-title icon-compass-desc">
       <title id="compass-title"></title>
       <desc id="compass-desc"></desc>
@@ -513,7 +513,7 @@
         <div class="container">
 
           <!-- Contact Form -->
-          <form id="contact-form" method="post" class="mr-ml-a mb-4 mw-56em" novalidate>
+          <form id="contact-form" netlify-honeypot="bot-field" action="thank-you" class="mr-ml-a mb-4 mw-56em" method="post" netlify novalidate>
             <h2 class="border-title mb-4">Contact form</h2>
             <div class="row">
               <div class="col-md-6">
@@ -611,9 +611,9 @@
               <li><a href="enterprise-mobile-crm.html">Enterprise Mobile CRM</a></li>
               <!--<li><a href="offerings.html">Offerings</a></li>-->
               <li><a href="product-technologies.html">Product Technologies</a></li>
-              <li><a href="advanced-testing.html">Advanced Testing</a></li>             
+              <li><a href="advanced-testing.html">Advanced Testing</a></li>
             </ul>
-          </nav>      
+          </nav>
           <!-- nav list -->
           <nav class="nav-list" aria-labelledby="company-analytics">
             <h3 id="company-analytics" class="nav-title"><a href="analytics.html">Analytics</a></h3>
