--- a/contact.html
+++ b/contact.html
@@ -513,8 +513,9 @@
         <div class="container">
 
           <!-- Contact Form -->
-          <form id="contact-form" netlify-honeypot="bot-field" action="thank-you" class="mr-ml-a mb-4 mw-56em" method="post" netlify novalidate>
+          <form id="contact-form" netlify-honeypot="bot-field" action="thank-you" class="mr-ml-a mb-4 mw-56em" method="post" netlify>
             <h2 class="border-title mb-4">Contact form</h2>
+            <p>* = required</p>
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
