--- a/thank-you.html
+++ b/thank-you.html
@@ -502,7 +502,7 @@
       </nav>
 
       <!-- masthead (dark) -->
-      <section class="masthead bg-full bg-hero-user theme-black">
+      <section class="masthead bg-full bg-hero-globe theme-black">
         <div class="container">
           <h1>Thank You</h1>
           <p class="lead">Someone will contact you soon.</p>
@@ -511,52 +511,6 @@
 
       <section id="page-start" class="page-content">
         <div class="container">
-
-          <!-- Contact Form -->
-          <form id="contact-form" netlify-honeypot="bot-field" action="thank-you" class="mr-ml-a mb-4 mw-56em" netlify novalidate>
-            <h2 class="border-title mb-4">Contact form</h2>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label class="sr-only" for="contactName">Name</label>
-                  <input class="form-control" type="text" id="contactName" name="name" placeholder="Name" required>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <label class="sr-only" for="contactEmail">Email</label>
-                  <input class="form-control" type="email" id="contactEmail" name="email" placeholder="E-mail" required>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-md-12">
-                <div class="form-group">
-                  <label class="sr-only" for="contactSubject">Subject</label>
-                  <input class="form-control" type="text" id="subject" name="subject" placeholder="Subject">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-md-12">
-                <div class="form-group">
-                  <label class="sr-only" for="contactMessage">Message</label>
-                  <textarea class="form-control" id="contactMessage" name="message" placeholder="Message" rows="12"></textarea>
-                  <small class="form-text text-muted p-sm hidden">
-                    Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
-                  </small>
-                </div>
-              </div>
-              <div class="col-md-12 mb-4">
-                <small class="form-text text-muted mr-ml-a mb-0 mw-56em align-center">Concordus Applications is a Systems Integrator that is focused on building a connected world by offering innovative, smart and cost-effective solutions. Our products aim to automate the business processes used for various Users in industries like the Communications Channel, Retail, Health care etc. We offer end-to-end services for software design, build, maintenance and support and we work across technology domains, platforms, infrastructure and tools.</small>
-              </div>
-              <div class="col-md-12">
-                <div class="align-center">
-                  <button class="btn btn-brand btn-xl" type="submit">Send Request</button>
-                </div>
-              </div>
-            </div>
-          </form>
-
         </div>
       </section>
 
